# llhfte

./: CLAUDE.md  CMakeLists.txt  compile_commands.json
build-dbg/: CMakeCache.txt  Makefile  cmake_install.cmake  llhfte
docs/suggestions/: unrolled_txlist.md
rapport/: README.md  intrusive_list_sentinel.md  order_map_open_addressing.md
src/: utils.hpp
src/data/: hashmap.cpp  hashmap.hpp  transaction.hpp  txlist.cpp  txlist.hpp
src/message/: add_order.hpp  message_header.hpp
